# TensorRT-Edge-LLM

./: .gitignore  CMakeLists.txt
cmake/: aarch64_linux_toolchain.cmake
cpp/: CMakeLists.txt
cpp/builder/: builder.cpp
cpp/common/: logger.h
cpp/kernels/common/: cublas_wrapper.cu  cublas_wrapper.h  cublaslt_wrapper.cu  cublaslt_wrapper.h  cublaslt_wrapper_nvfp4 .cu  cublaslt_wrapper_nvfp4.h  cutlass_wrapper.cu  cutlass_wrapper.h  cutlass_wrapper_blackwell.cu  cutlass_wrapper_blackwell.h  cutlass_wrapper_nvfp4_blockwise.cu  cutlass_wrapper_nvfp4_blockwise.h  nvfp4_quant.cu  nvfp4_quant.h  universal_operators.cu  universal_operators.h
cpp/kernels/moeCutlassKernels/: moeCutlassFp16Kernels.cu  moeCutlassFp16Kernels.h  moeInputsParams.h
cpp/kernels/moeKernels/: moeFp16Kernels.cu  moeFp16Kernels.h
cpp/kernels/moeNvfp4Kernels/: moeNvfp4InputsParams.h  (+2 more)
cpp/multimodal/: modelTypes.h  qwenViTRunner.cpp  qwenViTRunner.h
cpp/profiling/: timer.h
cpp/runtime/: llmInferenceRuntime.cpp  llmRuntimeUtils.h
examples/llm/: CMakeLists.txt  vlm_eval.py  vlm_infer.cpp  vlm_infer_test.cpp  vlm_interface.h
examples/utils/: profileFormatter.cpp
scripts/: build_cross.sh  build_cross_im.sh  build_cross_self.sh  build_x86.sh  common_config.sh  deploy.sh  input_with_images.json  ncu_cmd.sh  onnx_pruner.py  qwen3vl_engine_build.sh  qwen3vl_export_onnx.sh  qwen3vl_infer.py  qwen3vl_infer.sh  qwen3vl_run.sh  test_moe_kernel.sh  test_moe_plugins.sh
scripts/cmake/: aarch64-toolchain.cmake
scripts/plugin/: gemm_nvfp4_gen.py  generate_plugin.py  moe_fp16_config.json  moe_fp16_gen.py  moe_nvfp4_gen.py
scripts/thor/: build_thor.sh  common_config.sh  input_with_images.json  qwen3vl_engine_build.sh  qwen3vl_infer.sh  qwen3vl_run.sh  test_moe_plugins.sh
tensorrt_edgellm/llm_models/: model_utils.py
tensorrt_edgellm/onnx_export/: llm_export.py  visual_export.py
tensorrt_edgellm/quantization/: visual_quantization.py
tensorrt_edgellm/sd_models/: sd_modeling_qwen3_vl_moe.py
tensorrt_edgellm/visual_models/: qwen3_vl_moe_model.py
tests/: analyze_tools.ipynb
tests_cpp/: CMakeLists.txt
tests_cpp/cublas/: CMakeLists.txt
tests_cpp/cublas/check/: err_analysis.h
tests_cpp/cublas/cublas_ele_wise_mul/: elementwise_mul_bench.cu  elementwise_mul_bench.h  testElementwiseMul.cpp
tests_cpp/cublas/cublas_gemm/: gemm_bench.cu  gemm_bench.h  testGemm.cpp
tests_cpp/cublas/cublas_gemm_silu/: gemm_silu_bench.cu  gemm_silu_bench.h  testGemmSilu.cpp
tests_cpp/cublas/cublas_gemv/: CMakeLists.txt  gemv_bench.cu  gemv_bench.h  testGemv.cpp
tests_cpp/cublas/cublas_wrapper/: CMakeLists.txt  cublas_wrapper_bench.cu  cublas_wrapper_bench.h  testCublasWrapper.cpp
tests_cpp/cublas/cublaslt_wrapper/: CMakeLists.txt  cublaslt_wrapper_bench.cu  cublaslt_wrapper_bench.h  testCublasLtWrapper.cpp
tests_cpp/cublas/cublaslt_wrapper_nvfp4/: cublaslt_wrapper_nvfp4_bench.cu  cublaslt_wrapper_nvfp4_bench.h  testCublasLtNvfp4Wrapper.cpp
tests_cpp/cublas/universal_operators/: testUniversalOperators.cpp  universal_operators_test.cu  universal_operators_test.h
tests_cpp/cutlass/: CMakeLists.txt
tests_cpp/cutlass/check/: err_analysis.h
tests_cpp/cutlass/cutlass_gemm/: CMakeLists.txt  gemm_bench.cu  gemm_bench.h  testGemm.cpp
tests_cpp/cutlass/cutlass_gemm_silu/: gemm_silu_bench.cu  gemm_silu_bench.h  testGemmSilu.cpp
tests_cpp/cutlass/cutlass_gemv/: gemv_bench.cu  gemv_bench.h  testGemv.cpp
tests_cpp/cutlass/cutlass_wrapper/: CMakeLists.txt  cutlass_wrapper_bench.cu  cutlass_wrapper_bench.h  testCutlassWrapper.cpp
tests_cpp/cutlass/cutlass_wrapper_blackwell/: CMakeLists.txt  cutlass_wrapper_blackwell_bench.cu  cutlass_wrapper_blackwell_bench.h  testCutlassWrapperBlackwell.cpp
tests_cpp/cutlass/cutlass_wrapper_nvfp4/: cutlass_wrapper_nvfp4_bench.cu  cutlass_wrapper_nvfp4_bench.h  testCutlassWrapperNvfp4.cpp
tests_cpp/cutlass/cutlass_wrapper_nvfp4_blockwise/: CMakeLists.txt  cutlass_wrapper_nvfp4_blockwise_bench.cu  cutlass_wrapper_nvfp4_blockwise_bench.h  testCutlassWrapperNvfp4Blockwise.cpp
tests_cpp/cutlass/nvfp4_quant/: testNvfp4Quant.cpp
tests_cpp/kernels/: CMakeLists.txt
tests_cpp/kernels/moe_kernels/: CMakeLists.txt  main.cpp  testMoeFp16Kernels.cpp
tests_cpp/plugins/: CMakeLists.txt
tests_cpp/utils/: cuda_check.h  path_config.cpp  path_config.h  results_info.h  utils.cpp  utils.h
(+13 files in other folders)
